--- a/requirements.yml
+++ b/requirements.yml
@@ -3,3 +3,11 @@
     scm: git
     version: "1.11.0"
     name: clickhouse
+  - src: git@github.com:Timych84/vector-role.git
+    scm: git
+    version: "0.1.2"
+    name: vector-role
+  - src: git@github.com:Timych84/lighthouse_role.git
+    scm: git
+    version: "0.1.1"
+    name: lighthouse-role
