--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -4,6 +4,21 @@ dependency:
 driver:
   name: docker
 platforms:
+  - name: clickhouse
+    image: centos:7
+    dockerfile: ../resources/Dockerfile.j2
+    # pre_build_image: true
+    command: /sbin/init
+    capabilities:
+      - SYS_ADMIN
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    env:
+      ANSIBLE_USER: ansible
+      SUDO_GROUP: wheel
+      DEPLOY_GROUP: deployer
+      container: docker
+    privileged: True
   - name: vector
     image: centos:7
     dockerfile: ../resources/Dockerfile.j2
