--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -1,10 +1,31 @@
 ---
 # This is an example playbook to execute Ansible tests.
-
 - name: Verify
-  hosts: all
-  gather_facts: false
+  hosts: clickhouse
+  gather_facts: true
   tasks:
-  - name: Example assertion
-    assert:
-      that: true
+    - name: Verify clickhouse | Select count from table for syslog
+      ansible.builtin.command: "clickhouse-client -q '{{ clickhouse_syslog_select_table_query }}'"
+      register: create_db
+      changed_when: create_db.rc == 0
+    - name: Print count
+      ansible.builtin.debug:
+        var: create_db.stdout
+    - name: Pause for 10 minutes for additional log entries
+      ansible.builtin.pause:
+        seconds: 10
+    - name: Verify clickhouse | Select count from table for syslog
+      ansible.builtin.command: "clickhouse-client -q '{{ clickhouse_syslog_select_table_query }}'"
+      register: create_db_2
+      changed_when: create_db_2.rc == 0
+    - name: Print count
+      ansible.builtin.debug:
+        var: create_db_2.stdout
+    - name: Check if variables are equal
+      ansible.builtin.assert:
+        that:
+          - create_db_2.stdout > create_db.stdout
+        fail_msg: "Later log count not larger than earlier log count"
+    - name: Verify lighthouse | curl from clickhouse to lighthouse
+      ansible.builtin.uri:
+        url: "http://{{ hostvars['lighthouse']['ansible_default_ipv4']['address'] }}"
