--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,16 +1,30 @@
 ---
+- name: Converge clickhouse
+  hosts: clickhouse
+  tasks:
+    - name: "Include playbook"
+      ansible.builtin.include_role:
+        name: clickhouse
+  post_tasks:
+    - name: Configure clickhouse | Create table for syslog
+      ansible.builtin.command: "clickhouse-client -q '{{ clickhouse_syslog_create_table_query }}'"
+      register: create_db
+      failed_when: create_db.rc != 0 and create_db.rc != 57
+      changed_when: create_db.rc == 0
+- name: Converge lighthouse
+  hosts: lighthouse
+  tasks:
+    - name: "Include playbook"
+      ansible.builtin.include_role:
+        name: lighthouse-role
 - name: Converge vector
   hosts: vector
+  vars:
+    clickhouse_ipaddress: "{{ hostvars['clickhouse']['ansible_default_ipv4']['address'] }}"
   tasks:
     - name: "Include playbook"
       ansible.builtin.include_role:
         name: vector-role
-- name: Converge lighthouse
-  hosts: lighthouse
-  tasks:
     - name: Print the gateway for each host when defined
       ansible.builtin.debug:
-        var: hostvars['vector']['ansible_default_ipv4']['address']
-    - name: "Include playbook"
-      ansible.builtin.include_role:
-        name: lighthouse-role
+        var: hostvars['lighthouse']['ansible_default_ipv4']['address']
