modify molecule, add allhost test

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,30 +1,27 @@
 ---
-- name: Converge clickhouse
+- name: Install clickhouse
   hosts: clickhouse
   tasks:
-    - name: "Include playbook"
+    - name: "Include clickhouse role"
       ansible.builtin.include_role:
         name: clickhouse
   post_tasks:
     - name: Configure clickhouse | Create table for syslog
       ansible.builtin.command: "clickhouse-client -q '{{ clickhouse_syslog_create_table_query }}'"
-      register: create_db
-      failed_when: create_db.rc != 0 and create_db.rc != 57
-      changed_when: create_db.rc == 0
-- name: Converge lighthouse
+      register: create_tbl
+      failed_when: create_tbl.rc != 0 and create_tbl.rc != 57
+      changed_when: create_tbl.rc == 0
+- name: Install lighthouse
   hosts: lighthouse
   tasks:
-    - name: "Include playbook"
+    - name: "Include lighthouse role"
       ansible.builtin.include_role:
         name: lighthouse-role
-- name: Converge vector
+- name: Install Vector
   hosts: vector
   vars:
     clickhouse_ipaddress: "{{ hostvars['clickhouse']['ansible_default_ipv4']['address'] }}"
   tasks:
-    - name: "Include playbook"
+    - name: "Include vector role"
       ansible.builtin.include_role:
         name: vector-role
-    - name: Print the gateway for each host when defined
-      ansible.builtin.debug:
-        var: hostvars['lighthouse']['ansible_default_ipv4']['address']
